--- a/index.html
+++ b/index.html
@@ -2,12 +2,160 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Html+CSs练习</title>
+    <title>Html+CSS练习</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
-<style>
-</style>
 <body>
-
+   <!--导航栏-->
+   <div class="header w">
+       <div class="logo">
+           <a href="#" title="POLO360">
+               <img src="img/logo.png" alt="logo">
+           </a>
+       </div>
+       <!--导航列表-->
+       <ul class="nav">
+           <li>
+               <a href="#">HOME</a>
+               <p>Back To home</p>
+           </li>
+           <li>
+               <a href="#">PRODUCTS</a>
+               <p>What we have for you</p>
+           </li>
+           <li>
+               <a href="#">SERVICES</a>
+               <p>Things we do</p>
+           </li>
+           <li>
+               <a href="#">BLOG</a>
+               <p>Following our updates</p>
+           </li>
+           <li>
+               <a href="#">CONTACT</a>
+               <p>Contact wiith us</p>
+           </li>
+       </ul>
+   </div>
+   <!--Banner栏-->
+   <div class="banner w">
+       <img src="img/banner/banner01.png" alt="图片">
+       <div class="pointerDiv">
+           <a href="#"></a>
+           <a href="#" class="active"></a>
+           <a href="#"></a>
+           <a href="#"></a>
+           <a href="#"></a>
+       </div>
+   </div>
+   <!--内容区-->
+   <div class="content w clearfix">
+       <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
+       <div class="pl">
+           <h2>Perfect Logic</h2>
+           <p class="p1">All you want your website to do.</p>
+           <div class="imgDiv">
+               <img src="img/pic/pic1.jpg">
+           </div>
+           <p class="p2">
+               Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+           </p>
+           <a href="#" class="lm">Learn More</a>
+       </div>
+       <div class="cs">
+           <h2>Complete Solution</h2>
+           <p class="p1">A tool anything and everything you can think</p>
+           <div class="imgDiv">
+               <img src="img/pic/pic2.jpg">
+           </div>
+           <p class="p2">
+               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciun tdolore magnam aliquam quaerat voluptatem.
+           </p>
+           <a href="#" class="lm">Learn More</a>
+       </div>
+       <div class="uc">
+           <h2>Uber Culture</h2>
+           <p class="p1">Fresh. Modern and ready for future</p>
+           <div class="imgDiv">
+               <img src="img/pic/pic3.jpg">
+           </div>
+           <p class="p2">
+               Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+           </p>
+           <a href="#" class="lm">Learn More</a>
+       </div>
+   </div>
+   <!--联系栏-->
+   <div class="contact w clearfix">
+       <div class="sc">
+           <h2>Social Connection</h2>
+           <p class="p1">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+           <div class="icon">
+               <a href="#">
+                   <img src="img/rss.png"/>
+               </a>
+               <a href="#">
+                   <img src="img/fb.png"/>
+               </a>
+               <a href="#">
+                   <img src="img/in.png"/>
+               </a>
+               <a href="#">
+                   <img src="img/yt.png"/>
+               </a>
+               <a href="#">
+                   <img src="img/tw.png"/>
+               </a>
+           </div>
+           <h2 class="nl">Newsletter</h2>
+           <p class="p1">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+           <form action="#">
+               <input type="text" class="txt" placeholder="your email address">
+               <button class="btn">Subscribe</button>
+           </form>
+       </div>
+       <div class="co">
+           <h2>Contact</h2>
+           <form action="#">
+               <input type="text" class="txt" placeholder="your name">
+               <input type="text" class="txt" placeholder="your email address">
+               <textarea class="tarea" placeholder="message"></textarea>
+               <button class="btn">Send it</button>
+           </form>
+       </div>
+       <div class="nu">
+           <h2>News Updates</h2>
+           <p>
+               <img src="img/pic/1.gif">
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+           </p>
+           <p>
+               <img src="img/pic/2.gif">
+               Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+           </p>
+           <p>
+               <img src="img/pic/3.gif">
+               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+           </p>
+           <button class="btn">Visit our Blog</button>
+       </div>
+   </div>
+   <!--页面底部内容区-->
+   <div class="footer">
+       <div class="w">
+           <p class="copy">Copyright 2010. Studio VIVROCKS. All Rights Reserved.</p>
+           <p>Site Powered by Wordpress. Design and Developed by VIVROCKS.</p>
+           <p><a href="#">Home</a>  | <a href="#">About</a> | <a href="#">Products</a> | <a href="#">Services</a> | <a href="#">Contact</a></p>
+           <p><a href="#">Privacy Policy</a> | <a href="#">Terms of use</a></p>
+       </div>
+   </div>
 </body>
+<!--处理ie6不兼容png的格式布局-->
+<!-- [if IE 6]>
+<script src="js/DD_belatedPNG_0.0.8a-min.js"></script>
+<script>
+    DD_belatedPNG.fix("div,img,a,h1");
+</script>
+<[endif]-->
 </html>
