导航下拉显示隐藏

--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
        </div>
        <!--导航列表-->
        <ul class="nav">
-           <li>
+           <li id="home" class="home" name="show_hide">
                <a href="#">HOME</a>
                <p>Back To home</p>
+               <div id="home_items">
+                   <ul>
+                       <li><a>home-page</a></li>
+                       <li><a>home-page2</a></li>
+                       <li><a>home-page3</a></li>
+                       <li><a>home-page4</a></li>
+                   </ul>
+               </div>
            </li>
-           <li>
+           <li id="produ" class="produ" name="show_hide">
                <a href="#">PRODUCTS</a>
                <p>What we have for you</p>
            </li>
-           <li>
+           <li id="service" class="service" name="show_hide">
                <a href="#">SERVICES</a>
                <p>Things we do</p>
            </li>
