--- a/progress.html
+++ b/progress.html
@@ -33,7 +33,7 @@
 </style>
 <body>
    <div class="progress-bar">
-       <progress class="pro" value="10" max="100"></progress>
+       <progress class="pro" value="0" max="100"></progress>
        <p class="message"></p>
    </div>
 
@@ -54,7 +54,7 @@
       function progressRun() {
 
         var offset = proValue/(TIME/item_time);
-        console.log(offset);
+        //console.log(offset);
 
         var interPro = setInterval(function() {
           $progress[0].value += offset;
